// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`align bottom 1`] = `
<div>
  <div
    class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 css-dev-only-do-not-override-1enej14 css-var-root"
    id="bl-align bottom23456"
  >
    <div
      id="align bottom23456"
    >
      <div
        class="ant-row ant-row-bottom css-dev-only-do-not-override-1enej14 css-var-root"
        id="align bottom-content23456"
      >
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-10 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-One23456"
          style="background: rgb(64, 160, 255);"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-10 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Two23456"
          style="background: rgb(255, 79, 175);"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`align bottom wrap behavior 1`] = `
<div>
  <div
    class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 css-dev-only-do-not-override-1enej14 css-var-root"
    id="bl-align bottom wrap behavior23456"
  >
    <div
      id="align bottom wrap behavior23456"
    >
      <div
        class="ant-row ant-row-bottom css-dev-only-do-not-override-1enej14 css-var-root"
        id="align bottom wrap behavior-content23456"
      >
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-One23456"
          style="background: rgb(64, 160, 255);"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Two23456"
          style="background: rgb(255, 79, 175);"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`align middle 1`] = `
<div>
  <div
    class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 css-dev-only-do-not-override-1enej14 css-var-root"
    id="bl-align middle23456"
  >
    <div
      id="align middle23456"
    >
      <div
        class="ant-row ant-row-middle css-dev-only-do-not-override-1enej14 css-var-root"
        id="align middle-content23456"
      >
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-10 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-One23456"
          style="background: rgb(64, 160, 255);"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-10 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Two23456"
          style="background: rgb(255, 79, 175);"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`align middle wrap behavior 1`] = `
<div>
  <div
    class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 css-dev-only-do-not-override-1enej14 css-var-root"
    id="bl-align middle wrap behavior23456"
  >
    <div
      id="align middle wrap behavior23456"
    >
      <div
        class="ant-row ant-row-middle css-dev-only-do-not-override-1enej14 css-var-root"
        id="align middle wrap behavior-content23456"
      >
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-One23456"
          style="background: rgb(64, 160, 255);"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Two23456"
          style="background: rgb(255, 79, 175);"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`align top 1`] = `
<div>
  <div
    class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 css-dev-only-do-not-override-1enej14 css-var-root"
    id="bl-align top23456"
  >
    <div
      id="align top23456"
    >
      <div
        class="ant-row ant-row-top css-dev-only-do-not-override-1enej14 css-var-root"
        id="align top-content23456"
      >
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-10 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-One23456"
          style="background: rgb(64, 160, 255);"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-10 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Two23456"
          style="background: rgb(255, 79, 175);"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`align top wrap behavior 1`] = `
<div>
  <div
    class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 css-dev-only-do-not-override-1enej14 css-var-root"
    id="bl-align top wrap behavior23456"
  >
    <div
      id="align top wrap behavior23456"
    >
      <div
        class="ant-row ant-row-top css-dev-only-do-not-override-1enej14 css-var-root"
        id="align top wrap behavior-content23456"
      >
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-One23456"
          style="background: rgb(64, 160, 255);"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Two23456"
          style="background: rgb(255, 79, 175);"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`direction column 1`] = `
<div>
  <div
    class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 css-dev-only-do-not-override-1enej14 css-var-root"
    id="bl-direction column23456"
  >
    <div
      id="direction column23456"
    >
      <div
        class="ant-row css-dev-only-do-not-override-1enej14 css-var-root"
        id="direction column-content23456"
        style="flex-direction: column;"
      >
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-8 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-One23456"
          style="background: rgb(64, 160, 255);"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-8 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Two23456"
          style="background: rgb(255, 79, 175);"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-8 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Three23456"
          style="background: rgb(64, 170, 85);"
        >
          <div
            id="Three23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`direction column-reverse 1`] = `
<div>
  <div
    class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 css-dev-only-do-not-override-1enej14 css-var-root"
    id="bl-direction column-reverse23456"
  >
    <div
      id="direction column-reverse23456"
    >
      <div
        class="ant-row css-dev-only-do-not-override-1enej14 css-var-root"
        id="direction column-reverse-content23456"
        style="flex-direction: column-reverse;"
      >
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-8 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-One23456"
          style="background: rgb(64, 160, 255);"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-8 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Two23456"
          style="background: rgb(255, 79, 175);"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-8 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Three23456"
          style="background: rgb(64, 170, 85);"
        >
          <div
            id="Three23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`direction row 1`] = `
<div>
  <div
    class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 css-dev-only-do-not-override-1enej14 css-var-root"
    id="bl-direction row23456"
  >
    <div
      id="direction row23456"
    >
      <div
        class="ant-row css-dev-only-do-not-override-1enej14 css-var-root"
        id="direction row-content23456"
        style="flex-direction: row;"
      >
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-4 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-One23456"
          style="background: rgb(64, 160, 255);"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-4 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Two23456"
          style="background: rgb(255, 79, 175);"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-4 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Three23456"
          style="background: rgb(64, 170, 85);"
        >
          <div
            id="Three23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`direction row-reverse 1`] = `
<div>
  <div
    class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 css-dev-only-do-not-override-1enej14 css-var-root"
    id="bl-direction row-reverse23456"
  >
    <div
      id="direction row-reverse23456"
    >
      <div
        class="ant-row css-dev-only-do-not-override-1enej14 css-var-root"
        id="direction row-reverse-content23456"
        style="flex-direction: row-reverse;"
      >
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-4 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-One23456"
          style="background: rgb(64, 160, 255);"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-4 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Two23456"
          style="background: rgb(255, 79, 175);"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-4 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Three23456"
          style="background: rgb(64, 170, 85);"
        >
          <div
            id="Three23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`gutter as integer 1`] = `
<div>
  <div
    class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 css-dev-only-do-not-override-1enej14 css-var-root"
    id="bl-gutter as integer23456"
  >
    <div
      id="gutter as integer23456"
    >
      <div
        class="ant-row css-dev-only-do-not-override-1enej14 css-var-root"
        id="gutter as integer-content23456"
        style="margin-inline: -15px; row-gap: 30px;"
      >
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-12 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-One23456"
          style="padding-inline: 15px;"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-12 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Two23456"
          style="padding-inline: 15px;"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-10 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Three23456"
          style="padding-inline: 15px;"
        >
          <div
            id="Three23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-10 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Four23456"
          style="padding-inline: 15px;"
        >
          <div
            id="Four23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`gutter for col and row 1`] = `
<div>
  <div
    class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 css-dev-only-do-not-override-1enej14 css-var-root"
    id="bl-gutter for col and row23456"
  >
    <div
      id="gutter for col and row23456"
    >
      <div
        class="ant-row css-dev-only-do-not-override-1enej14 css-var-root"
        id="gutter for col and row-content23456"
        style="margin-inline: -25px; row-gap: 20px;"
      >
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-12 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-One23456"
          style="padding-inline: 25px; background: rgb(64, 160, 255);"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-12 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Two23456"
          style="padding-inline: 25px; background: rgb(255, 79, 175);"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-10 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Three23456"
          style="padding-inline: 25px; background: rgb(255, 79, 175);"
        >
          <div
            id="Three23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-10 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Four23456"
          style="padding-inline: 25px; background: rgb(64, 160, 255);"
        >
          <div
            id="Four23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`gutter is object 1`] = `
<div>
  <div
    class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 css-dev-only-do-not-override-1enej14 css-var-root"
    id="bl-gutter is object23456"
  >
    <div
      id="gutter is object23456"
    >
      <div
        class="ant-row css-dev-only-do-not-override-1enej14 css-var-root"
        id="gutter is object-content23456"
        style=""
      >
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-12 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-One23456"
          style="background: rgb(64, 160, 255);"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-12 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Two23456"
          style="background: rgb(255, 79, 175);"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-10 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Three23456"
          style="background: rgb(255, 79, 175);"
        >
          <div
            id="Three23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-10 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Four23456"
          style="background: rgb(64, 160, 255);"
        >
          <div
            id="Four23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`justify center 1`] = `
<div>
  <div
    class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 css-dev-only-do-not-override-1enej14 css-var-root"
    id="bl-justify center23456"
  >
    <div
      id="justify center23456"
    >
      <div
        class="ant-row ant-row-center css-dev-only-do-not-override-1enej14 css-var-root"
        id="justify center-content23456"
      >
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-4 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-One23456"
          style="background: rgb(64, 160, 255);"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-4 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Two23456"
          style="background: rgb(255, 79, 175);"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-4 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Three23456"
          style="background: rgb(64, 170, 85);"
        >
          <div
            id="Three23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`justify end 1`] = `
<div>
  <div
    class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 css-dev-only-do-not-override-1enej14 css-var-root"
    id="bl-justify end23456"
  >
    <div
      id="justify end23456"
    >
      <div
        class="ant-row ant-row-end css-dev-only-do-not-override-1enej14 css-var-root"
        id="justify end-content23456"
      >
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-4 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-One23456"
          style="background: rgb(64, 160, 255);"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-4 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Two23456"
          style="background: rgb(255, 79, 175);"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-4 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Three23456"
          style="background: rgb(64, 170, 85);"
        >
          <div
            id="Three23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`justify space-around 1`] = `
<div>
  <div
    class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 css-dev-only-do-not-override-1enej14 css-var-root"
    id="bl-justify space-around23456"
  >
    <div
      id="justify space-around23456"
    >
      <div
        class="ant-row ant-row-space-around css-dev-only-do-not-override-1enej14 css-var-root"
        id="justify space-around-content23456"
      >
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-4 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-One23456"
          style="background: rgb(64, 160, 255);"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-4 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Two23456"
          style="background: rgb(255, 79, 175);"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-4 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Three23456"
          style="background: rgb(64, 170, 85);"
        >
          <div
            id="Three23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`justify space-between 1`] = `
<div>
  <div
    class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 css-dev-only-do-not-override-1enej14 css-var-root"
    id="bl-justify space-between23456"
  >
    <div
      id="justify space-between23456"
    >
      <div
        class="ant-row ant-row-space-between css-dev-only-do-not-override-1enej14 css-var-root"
        id="justify space-between-content23456"
      >
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-4 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-One23456"
          style="background: rgb(64, 160, 255);"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-4 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Two23456"
          style="background: rgb(255, 79, 175);"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-4 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Three23456"
          style="background: rgb(64, 170, 85);"
        >
          <div
            id="Three23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`justify start 1`] = `
<div>
  <div
    class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 css-dev-only-do-not-override-1enej14 css-var-root"
    id="bl-justify start23456"
  >
    <div
      id="justify start23456"
    >
      <div
        class="ant-row ant-row-start css-dev-only-do-not-override-1enej14 css-var-root"
        id="justify start-content23456"
      >
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-4 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-One23456"
          style="background: rgb(64, 160, 255);"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-4 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Two23456"
          style="background: rgb(255, 79, 175);"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-4 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Three23456"
          style="background: rgb(64, 170, 85);"
        >
          <div
            id="Three23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`overflow hidden 1`] = `
<div>
  <div
    class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 css-dev-only-do-not-override-1enej14 css-var-root"
    id="bl-overflow hidden23456"
  >
    <div
      id="overflow hidden23456"
    >
      <div
        class="ant-row css-dev-only-do-not-override-1enej14 css-var-root"
        id="overflow hidden-content23456"
        style="flex-wrap: nowrap; overflow: hidden;"
      >
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-12 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-One23456"
          style="background: rgb(64, 160, 255);"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-8 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Two23456"
          style="background: rgb(255, 79, 175);"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-15 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Three23456"
          style="background: rgb(64, 170, 85);"
        >
          <div
            id="Three23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`overflow scroll 1`] = `
<div>
  <div
    class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 css-dev-only-do-not-override-1enej14 css-var-root"
    id="bl-overflow scroll23456"
  >
    <div
      id="overflow scroll23456"
    >
      <div
        class="ant-row css-dev-only-do-not-override-1enej14 css-var-root"
        id="overflow scroll-content23456"
        style="flex-wrap: nowrap; overflow: scroll;"
      >
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-12 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-One23456"
          style="background: rgb(64, 160, 255);"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-8 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Two23456"
          style="background: rgb(255, 79, 175);"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-15 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Three23456"
          style="background: rgb(64, 170, 85);"
        >
          <div
            id="Three23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`overflow visible 1`] = `
<div>
  <div
    class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 css-dev-only-do-not-override-1enej14 css-var-root"
    id="bl-overflow visible23456"
  >
    <div
      id="overflow visible23456"
    >
      <div
        class="ant-row css-dev-only-do-not-override-1enej14 css-var-root"
        id="overflow visible-content23456"
        style="flex-wrap: nowrap; overflow: visible;"
      >
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-12 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-One23456"
          style="background: rgb(64, 160, 255);"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-8 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Two23456"
          style="background: rgb(255, 79, 175);"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-15 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Three23456"
          style="background: rgb(64, 170, 85);"
        >
          <div
            id="Three23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`wrap nowrap 1`] = `
<div>
  <div
    class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 css-dev-only-do-not-override-1enej14 css-var-root"
    id="bl-wrap nowrap23456"
  >
    <div
      id="wrap nowrap23456"
    >
      <div
        class="ant-row css-dev-only-do-not-override-1enej14 css-var-root"
        id="wrap nowrap-content23456"
        style="flex-wrap: nowrap;"
      >
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-10 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-One23456"
          style="background: rgb(64, 160, 255);"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-10 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Two23456"
          style="background: rgb(255, 79, 175);"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-10 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Three23456"
          style="background: rgb(64, 170, 85);"
        >
          <div
            id="Three23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`wrap wrap-reverse 1`] = `
<div>
  <div
    class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 css-dev-only-do-not-override-1enej14 css-var-root"
    id="bl-wrap wrap-reverse23456"
  >
    <div
      id="wrap wrap-reverse23456"
    >
      <div
        class="ant-row css-dev-only-do-not-override-1enej14 css-var-root"
        id="wrap wrap-reverse-content23456"
        style="flex-wrap: wrap-reverse;"
      >
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-12 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-One23456"
          style="background: rgb(64, 160, 255);"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-8 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Two23456"
          style="background: rgb(255, 79, 175);"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-15 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Three23456"
          style="background: rgb(64, 170, 85);"
        >
          <div
            id="Three23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
